added better delete option for recipe
Co-authored-by: Luckie <eluckie.d@gmail.com>
Co-authored-by: erintimli01 <erintimli01@users.noreply.github.com>
Co-authored-by: Chris <johnedisc@users.noreply.github.com>
Co-authored-by: John Diggins <John-Dig@users.noreply.github.com>
Co-authored-by: Mike Donovan <mike@mikedonovan.dev>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     } 
       @foreach (Recipe recipe in Model)
       {
-        <h3 class="instructions">@Html.ActionLink(@recipe.Name, "Details", "Recipes", new { id = @recipe.RecipeId})</h3>
+        <h3 class="recipe-list">@Html.ActionLink(@recipe.Name, "Details", "Recipes", new { id = @recipe.RecipeId})</h3>
       }
   }
   else
