--- a/RecipeBox/Views/Account/Login.cshtml
+++ b/RecipeBox/Views/Account/Login.cshtml
@@ -7,7 +7,6 @@
 @model LoginViewModel
 
 <h2>Log in with your account</h2>
-<hr />
 
 @if(!ViewData.ModelState.IsValid) 
 {
@@ -16,8 +15,10 @@
 
 @using (Html.BeginForm())
 {
-  @Html.LabelFor(m => m.Email)
-  @Html.TextBoxFor(m => m.Email)
+  <div class="form-row">
+    @Html.LabelFor(m => m.Email)
+    @Html.TextBoxFor(m => m.Email)
+  </div>
   <br><br>
   @Html.LabelFor(m => m.Password)
   @Html.EditorFor(m => m.Password)
