--- a/RecipeBox/Views/Tags/Index.cshtml
+++ b/RecipeBox/Views/Tags/Index.cshtml
@@ -5,17 +5,17 @@
 @using RecipeBox.Models;
 
 <div class="recipeIndex">
-<h1>Tags</h1>
+  <h1 class="recipe-list">Tags</h1>
 
-@if (@Model.Count == 0)
-{
-  <h3>No tags have been added yet!</h3>
-} 
+  @if (@Model.Count == 0)
+  {
+    <h3>No tags have been added yet!</h3>
+  } 
 
-@foreach (Tag tag in Model)
-{
-  <li>@Html.ActionLink($"{tag.Title}", "Details", new { id = tag.TagId })</li>
-}
+  @foreach (Tag tag in Model)
+  {
+    <li>@Html.ActionLink($"{tag.Title}", "Details", new { id = tag.TagId })</li>
+  }
 
 </div>
 <div class="recipeLayout">
