updates with admin log in
Co-authored-by: Mike Donovan <mike@mikedonovan.dev>
Co-authored-by: Luckie <eluckie.d@gmail.com>
Co-authored-by: erintimli01 <erintimli01@users.noreply.github.com>
Co-authored-by: Chris <johnedisc@users.noreply.github.com>
Co-authored-by: John Diggins <John-Dig@users.noreply.github.com>

--- a/RecipeBox/Views/Account/Edit.cshtml
+++ b/RecipeBox/Views/Account/Edit.cshtml
@@ -4,12 +4,12 @@
 
 @model RecipeBox.Models.ApplicationUser
 
-<h2>Edit @Html.DisplayFor(model => model.FirstName)</h2>
+<h2>Edit @Html.DisplayFor(model => model.UserName)</h2>
 
 @using (Html.BeginForm())
 {
   @Html.Label("Updated Name: ")
-  @Html.EditorFor(model => model.FirstName)
+  @Html.EditorFor(model => model.UserName)
   <br><br>
   <input type="submit" value="Save" id="green-button"/>
 }
