--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
   @if (User.Identity.IsAuthenticated)
   {
-    <h2>Recipes for @ViewBag.FirstName!</h2>
+    <h2>Recipes for @ViewBag.UserName!</h2>
     @if (Model.Count == 0)
     {
       <h3>No recipes have been added yet!</h3>
