--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -5,7 +5,7 @@
 @using RecipeBox.Models;
 
 <div class="recipeIndex">
-<h1 class="recipe-list">Recipes for @ViewBag.FirstName</h1>
+<h1 class="recipe-list">Recipes for @ViewBag.UserName</h1>
 
 @if (@Model.Count == 0)
 {
