--- a/RecipeBox/Views/Role/Index.cshtml
+++ b/RecipeBox/Views/Role/Index.cshtml
@@ -1,18 +1,18 @@
 @using Microsoft.AspNetCore.Identity;
-@using Microsoft.AspNetCore.Identity.EntityFrameworkCore
 @model IEnumerable<IdentityRole>
 @{
-    ViewData["Title"] = "ROLES";
+  Layout = "_Layout";
 }
-  
+
 <h1 class="bg-info text-white">All Roles</h1>
 <a asp-action="Create" class="btn btn-secondary">Create a Role</a>
-  
     <tr><th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th></tr>
     @foreach (var role in Model)
     {
-            @role.Id
-            @role.Name
+        <tr>
+            <td>@role.Id</td>
+            <td>@role.Name</td>
+        </tr>
             <a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a>
                 <form asp-action="Delete" asp-route-id="@role.Id" method="post">
                     <button type="submit" class="btn btn-sm btn-danger">
@@ -20,3 +20,4 @@
                     </button>
                 </form>
     }
+    
