Refine login method to use name or email
Co-authored-by: Chris <johnedisc@users.noreply.github.com>
Co-authored-by: erintimli01 <erintimli01@users.noreply.github.com>
Co-authored-by: Luckie <eluckie.d@gmail.com>
Co-authored-by: kaisama92 <kaisama92@users.noreply.github.com>
Co-authored-by: Jannon Sielaff <Razieleron@users.noreply.github.com>
Co-authored-by: John Diggins <John-Dig@users.noreply.github.com>

--- a/RecipeBox/Views/Admin/Create.cshtml
+++ b/RecipeBox/Views/Admin/Create.cshtml
@@ -9,8 +9,8 @@
   
 @using (Html.BeginForm())
 {
-    @Html.LabelFor(model => model.UserName)
-    @Html.TextBoxFor(model => model.UserName)
+    @Html.LabelFor(model => model.FirstName)
+    @Html.TextBoxFor(model => model.FirstName)
 
     @Html.LabelFor(model => model.Email)
     @Html.TextBoxFor(model => model.Email)
