--- a/RecipeBox/Views/Admin/Update.cshtml
+++ b/RecipeBox/Views/Admin/Update.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<h1 class="bg-info text-white">Updating User @Model.UserName</h1>
+<h1 class="bg-info text-white">Updating User @Model.FirstName</h1>
 <a asp-action="Index" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -13,8 +13,8 @@
 {
 
     
-    @Html.LabelFor(model => model.UserName)
-    @Html.EditorFor(model => model.UserName)
+    @Html.LabelFor(model => model.FirstName)
+    @Html.EditorFor(model => model.FirstName)
 
     @Html.LabelFor(model => model.Email)
     @Html.EditorFor(model => model.Email)
