--- a/RecipeBox/Views/Account/Register.cshtml
+++ b/RecipeBox/Views/Account/Register.cshtml
@@ -17,7 +17,7 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
   @Html.Label("First Name:")
-  @Html.TextBoxFor(user=> user.UserName)
+  @Html.TextBoxFor(user=> user.FirstName)
   <br><br>
   @Html.LabelFor(user => user.Email)
   @Html.TextBoxFor(user=> user.Email)
